# 3R_manip_keyboard_control

./: CMakeCache.txt  README.md
rrbot_control/config/: rrbot_control.yaml  trajectory_control.yaml
rrbot_control/launch/: rrbot_control.launch
rrbot_description/: CMakeLists.txt  package.xml
rrbot_description/gazebo_plugin/: control_plugin.cc
rrbot_description/urdf/: rrbot.gazebo  rrbot.urdf  rrbot.xacro  rrbot.xml
rrbot_gazebo/: CMakeLists.txt  bashrc_ref  package.xml
rrbot_gazebo/config/: rrbot_gazebo_joint_positions.yaml
rrbot_gazebo/include/: keyboard_control.h  non_lin_solver.h
rrbot_gazebo/launch/: keyboard_control.launch  rrbot_gazebo_position.launch  rrbot_gazebo_states.launch  rrbot_trajectory_controller.launch  rrbot_world.launch
rrbot_gazebo/src/: COM_computation.cpp  COM_motion.cpp  forward_kin.cpp  joint_publisher.cpp  keyboard_control_node.cpp  non_lin_solver.cpp  non_lin_solver_Newton.cpp  sensor_reader.cpp
rrbot_gazebo/worlds/: rrbot.world
