<package>
  <name>rrbot_gazebo</name>
  <version>0.1.0</version>
  <description>rrbot_gazebo</description>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>
 <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
<run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
 <build_depend>keyboard</build_depend>


<build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>interactive_markers</build_depend>
<build_depend>moveit_visual_tools</build_depend>
<build_depend>gazebo_ros</build_depend>

 <run_depend>moveit_core</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>moveit_visual_tools</run_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>rrbot_control</run_depend>
  <run_depend>rrbot_description</run_depend>
  <run_depend>xacro</run_depend>
<run_depend>keyboard</run_depend>

<build_depend>kdl_parser</build_depend> 
    <run_depend>kdl_parser</run_depend>

<build_depend>urdf</build_depend> 
    <run_depend>urdf</run_depend>

  <export>
 <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
